# cargo-patch-crate

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  manifest.rs
tests/: roundtrip.rs
tests/common/: mod.rs
tests/fixtures/broken-patch/: Cargo.toml  test.sh
tests/fixtures/broken-patch/patches/: serde_json+1.0.149.patch
tests/fixtures/broken-patch/src/: main.rs
tests/fixtures/roundtrip/: Cargo.toml
tests/fixtures/roundtrip/patches/: home+0.5.12.patch
tests/fixtures/roundtrip/src/: main.rs
